--- a/contact-us.css
+++ b/contact-us.css
@@ -39,3 +39,13 @@
     border: 1px solid #81B6C4;
     box-shadow: 0.5px 0.5px #81B6C4;
 }
+
+.contact-us__btn{
+    width: 20rem;
+    border-radius: 5px;
+    border: 1px solid #81B6C4;
+    padding: 0.6rem 1.5rem;
+    margin: 0rem auto 4rem;
+    background-color: #81B6C4;
+    font-weight: bolder;
+}
